--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.cdnfonts.com/css/source-sans-pro');
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;500;600;700;800;900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
