Polished Contact button animation, added h1 hover animations

--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,8 @@
   background-size: 10px 10px;
   backdrop-filter: blur(3px);
 }
+
+.outlinetext:hover{
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: white;
+}
