--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.cdnfonts.com/css/source-sans-pro');
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;500;600;700;800;900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 *{
   color: white;
   font-family: 'Source Sans Pro', sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 
 .dotedbg{
@@ -26,7 +26,7 @@
   backdrop-filter: blur(3px);
 }
 
-.outlinetext:hover{
+.outlinetext{
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: white;
 }
